--- a/home.css
+++ b/home.css
@@ -154,14 +154,14 @@ nav .fa-regular{
 }
 @media only screen and (max-width:600px){
     #header{
-        background-image: url(images/WhatsApp\ Image\ 2023-05-09\ at\ 8.14.43\ PM.jpeg);
+        background-image: url(./background.jpg);
     }
     .header-text{
         margin-top: 100%;
         font-size: 16px;
     }
     .header-text h1{
-        font-size: 30px;
+        font-size: 16px;
     }
     nav .fa-solid{
         color: white;
@@ -203,6 +203,17 @@ nav .fa-regular{
         cursor: pointer;
         margin-top: -200px;
     }
-    
-      
+    .sub-title{
+        font-size: 40px;
+    }
+    .about-col-1,.about-col-2{
+        flex-basis: 100%;
+    }
+    .about-col-1{
+        margin-bottom: 30px
+    }
+    .about-col-2{
+        width: fit-content;
+        font-size: 14px;
+    }
 }
